--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -12,7 +12,7 @@
 
 .inputtext {
     height: 40px;
-    width: 350px;
+    width: 100%;
     background-color: #333333;
     border: 1px solid white;
 }
@@ -82,6 +82,7 @@
         background-color: #333333;
         margin-bottom: 5px;
         border: 1px solid white;
+        
     }
 
     .footersecondmain {
