--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -1,41 +1,6 @@
 .fssize {
     font-size: 30px;
 }
-/* .dropdown-item{
-    margin-left: -40px;
-    width: 50px;
-    border: 0px;
-} */
-@media screen and (max-width: 768px) {
-    .parent-list:hover .child-list {
-        display: none;
-    }
-
-    .nav-item.dropdown {
-        position: relative;
-    }
-
-    .nav-link.dropdown-toggle::after {
-        display: inline-block;
-        width: 0;
-        height: 0;
-        margin-left: .255em;
-        vertical-align: .255em;
-        content: "";
-        border-top: .3em solid;
-        border-right: .3em solid transparent;
-        border-bottom: 0;
-        border-left: .3em solid transparent;
-        z-index: 1;
-        position: absolute;
-        top: 10px;
-    }
-
-    .child-list {
-        left: 199px;
-        top: 51px;
-    }
-}
 
 .parent-list {
     list-style-type: none;
@@ -44,8 +9,8 @@
 
 .child-list {
     position: absolute;
-    left: 193px;
-    top: 10px;
+    left: 213px;
+    top: 0px;
     background: #F0F0F0;
     list-style-type: none;
     display: none;
@@ -111,10 +76,12 @@
 }
 
 .navbardivfirst {
-    margin-left: 50px;
-    margin-right: 50px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
+    background-color: white;
+    width: 100%;
+    border: 1px solid black;
 }
 
 .navbartopheanding {
@@ -156,15 +123,50 @@
 .nav-link.dropdown-toggle::after {
     display: none;
 }
+@media screen and (max-width: 768px) {
+    .parent-list:hover .child-list {
+        display: none;
+    }
 
+    .nav-item.dropdown {
+        position: relative;
+    }
+
+    .nav-link.dropdown-toggle::after {
+        display: inline-block;
+        width: 0;
+        height: 0;
+        margin-left: .255em;
+        vertical-align: .255em;
+        content: "";
+        border-top: .3em solid;
+        border-right: .3em solid transparent;
+        border-bottom: 0;
+        border-left: .3em solid transparent;
+        z-index: 1;
+        position: absolute;
+        top: 10px;
+    }
+
+    .child-list {
+        left: 199px;
+        top: 51px;
+    }
+
+
+    /* ---- Mobile navbar  */
+    .icon-container {
+        display: none;
+    }
+}
 @media only screen and (max-width: 600px) {
     .fssize {
         font-size: 15px;
     }
 
     .navbardivfirst {
-        margin-left: 10px;
-        margin-right: 10px;
+        /* margin-left: 10px; */
+        /* margin-right: 10px; */
         display: flex;
         justify-content: space-between;
     }
@@ -221,13 +223,7 @@
 
     .navbar-toggler {
         margin-left: 85%;
-    }
-
-    .icon-container {
-        display: flex;
-        gap: 10px;
-        justify-content: center;
-        align-items: center;
+        margin-top: -9%;
     }
 
     .navbaralllink {
@@ -238,5 +234,8 @@
 
     .nav-link.dropdown-toggle::after {
         display: none;
+    }
+    .call{
+        display: none !important;
     }
 }
