--- a/src/Component/Products/HeadLightProduct/HeadLight.css
+++ b/src/Component/Products/HeadLightProduct/HeadLight.css
@@ -152,7 +152,6 @@
 @media only screen and (max-width: 600px) {
     .firstdivfirstchild {
         width: 90%;
-        /* background-color: rgba(0, 0, 0, 0.189); */
     }
     .firstdivsecchild{
         width: 100%;
@@ -173,12 +172,6 @@
         margin-bottom: 50px;
         width: 90%;
         padding: 10px;
-        /* text-transform: uppercase;
-        font-weight: 600;
-        border-radius: 5px;
-        background-color: #00abed;
-        border: 0px;
-        color: white; */
     }
     .seconddivwidth{
         width: "100%"
@@ -187,10 +180,8 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        /* border-bottom: 1px solid #3333334c;
-        margin-bottom: 15px;
-        padding: 10px;
-        justify-content: baseline;
-        align-items: baseline; */
+    }
+    .headlightsection {
+        padding: 0px 13px;
     }
 }
