--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -158,6 +158,7 @@
     .icon-container {
         display: none;
     }
+  
 }
 @media only screen and (max-width: 600px) {
     .fssize {
@@ -211,8 +212,8 @@
 
     .navbar-nav {
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content: start;
+        align-items: start;
         gap: 1px;
     }
 
