--- a/src/Component/AboutUs/About.css
+++ b/src/Component/AboutUs/About.css
@@ -9,7 +9,18 @@
     width: 80%;
     height: auto;
 }
-
+.linecardtext{
+    text-align: center;
+    font-size: 20px;
+    color: black;
+    font-weight: 700;
+}
+.linecardheading{
+    text-align: center;
+    font-size: 50px;
+    color: black;
+    font-weight: 700;
+}
 .childabout2 {
     width: 20%;
 }
