--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -3,6 +3,25 @@
     color: white;
 }
 
+.floating {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
+
+.fab-icon {
+    margin-top: 16px;
+}
+
 .footermaindiv {
     display: flex;
     justify-content: space-between;
@@ -66,6 +85,12 @@
     border-radius: 10px
 }
 
+.footericon {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+
 @media only screen and (max-width: 600px) {
     .footermaindiv {
         display: flex;
@@ -82,40 +107,45 @@
         background-color: #333333;
         margin-bottom: 5px;
         border: 1px solid white;
-        
+
     }
 
     .footersecondmain {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
         justify-content: space-between;
         align-items: start;
         padding: 10px;
     }
 
     .secondchilddiv {
-        height: 100px;
-        width: 100px;
+        height: 150px;
+        width: 150px;
         border: 1px solid white;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
     .footerimage {
-        height: 70px;
+        height: 80px;
         border-radius: 10px
     }
+
     .footerheading {
         font-size: 15px;
         font-weight: 700;
     }
+
     .Childfirst {
         display: flex;
         gap: 50px;
         font-size: 10px;
     }
-   /* .textdeco{
+
+    /* .textdeco{
     text-decoration: none !important;
     color: white !important;
    } */
