--- a/src/Component/Home/style.css
+++ b/src/Component/Home/style.css
@@ -110,7 +110,7 @@
     height: 270px;
     width: 100%;
     object-fit: cover;
-    background-image: url("https://2.wlimg.com/product_images/bc-small/dir_100/2990960/custom-wiring-harness-1218733.jpg");
+    /* background-image: url("https://2.wlimg.com/product_images/bc-small/dir_100/2990960/custom-wiring-harness-1218733.jpg"); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
