--- a/src/Component/AboutUs/About.css
+++ b/src/Component/AboutUs/About.css
@@ -17,7 +17,7 @@
 }
 .linecardheading{
     text-align: center;
-    font-size: 50px;
+    font-size: 30px;
     color: black;
     font-weight: 700;
 }
@@ -94,5 +94,7 @@
         font-size: 10px;
         font-weight: 500;
     }
-    
+    .linecardheading{
+        font-size: 20px;
+    }
 }
