--- a/src/Component/Career/Career.css
+++ b/src/Component/Career/Career.css
@@ -47,4 +47,7 @@ border-radius: 5px;
         font-size: 18px;
         text-align: center;
     }
+    .careerpara{
+        text-align: justify;
+    }
 }
