--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -183,7 +183,9 @@
     .fssize {
         font-size: 20px;
     }
-
+    .fssize {
+        font-size: 20px;
+    }
     .pdfcolor {
         height: 20px;
         margin-top: -5px;
