--- a/src/Component/Home/style.css
+++ b/src/Component/Home/style.css
@@ -10,6 +10,7 @@
 }
 .isoimgae{
     height: 50px;
+    margin-top: -20px;
 }
 .heading {
     text-align: center;
@@ -280,7 +281,10 @@
         letter-spacing: 1px;
         text-transform: uppercase;
     }
-    
+    .isoimgae{
+        height: 20px;
+        margin-top: -5px;
+    }
 .paragraph {
     text-align: start;
     letter-spacing: 0px;
